build(docker): specify explicit env file path in compose

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   mc:
     image: itzg/minecraft-server
+    env_file:
+      - .env.docker
     environment:
       EULA: true
       TYPE: ${TYPE}
