fix(deploy): standardize script permissions to 750 across workflow
- Update CI workflow to use explicit 750 permissions
- Apply same permission model in file-sync.sh

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Setup Environment
         run: |
           mkdir -p $MINECRAFT_HOME/deploy-logs
-          chmod +x scripts/*.sh
+          chmod 750 scripts/*.sh
       
       - name: Analyze Changes
         id: changes
